Migrate from slim to erb

--- a/source/slides.html.erb
+++ b/source/slides.html.erb
@@ -1,120 +1,155 @@
-section
-  h1 Slides
-  div.slides-wrapper
-    div.slide
+<section>
+  <h1>Slides</h1>
+  <div class="slides-wrapper">
+    <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/rubykaigi-takeout-2021/viewer.html" width="640" height="404" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen> </iframe><div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/rubykaigi-takeout-2021/" title="Ruby, Ractor, QUIC">Ruby, Ractor, QUIC</a></div>
-    div.slide
+    </div>
+    <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/heiseirubykaigi-1/viewer.html" width="640" height="524" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen> </iframe><div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/heiseirubykaigi-1/" title="heiseirubykaigi-1">heiseirubykaigi-1</a></div>
-    div.slide
+    </div>
+    <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-53/viewer.html" width="640" height="524" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen></iframe><div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-53/" title="omotesandorb #53">omotesandorb #53</a></div>
-    div.slide
+    </div>
+    <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-52/viewer.html" width="640" height="524" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen></iframe><div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-52/" title="omotesandorb #52">omotesandorb #52</a></div>
-    div.slide
+    </div>
+    <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-51/viewer.html" width="640" height="524" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen></iframe><div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-51/" title="omotesandorb #51">omotesandorb #51</a></div>
-    div.slide
+    </div>
+    <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/container_runtime_meetup_1/viewer.html" width="640" height="524" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen> </iframe><div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/container_runtime_meetup_1/" title="Container Runtime Meetup #1">Container Runtime Meetup #1</a></div>
-    div.slide
+    </div>
+    <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-49/viewer.html" width="640" height="524" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen> </iframe>
       <div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-49/" title="omotesandorb #49">omotesandorb #49</a></div>
-    div.slide
+    </div>
+    <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/heiseirb-6/viewer.html" width="640" height="524" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen> </iframe>
       <div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/heiseirb-6/" title="平成.rb #6">平成.rb #6</a></div>
-    div.slide
+    </div>
+    <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-48/viewer.html" width="640" height="524" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen> </iframe>
       <div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-48/" title="omotesandorb #48">omotesandorb #48</a></div>
-    div.slide
+    </div>
+    <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/rejectkaigi2019/viewer.html" width="640" height="524" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen> </iframe>
       <div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/rejectkaigi2019/" title="RejectKaigi 2019">RejectKaigi 2019</a></div>
-    div.slide
-      iframe(src="https://unasuke.github.io/heiseirb-2/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/heiseirb-2/") https://unasuke.github.io/heiseirb-2/
-    div.slide
-      iframe(src="https://unasuke.github.io/omotesandorb-44/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/omotesandorb-44/") https://unasuke.github.io/omotesandorb-44/
-    div.slide
-      iframe(src="https://unasuke.github.io/omotesandorb-43/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/omotesandorb-43/") https://unasuke.github.io/omotesandorb-43/
-    div.slide
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/heiseirb-2/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/heiseirb-2/">https://unasuke.github.io/heiseirb-2/</a>
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/omotesandorb-44/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/omotesandorb-44/">https://unasuke.github.io/omotesandorb-44/</a>
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/omotesandorb-43/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/omotesandorb-43/">https://unasuke.github.io/omotesandorb-43/</a>
+    </div>
+    <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-41/viewer.html" width="640" height="524" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen> </iframe>
       <div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-41/" title="omotesando.rb #41">omotesando.rb #41</a></div>
-    div.slide
+    </div>
+    <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-40/viewer.html" width="640" height="524" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen> </iframe>
       <div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/omotesandorb-40/" title="omotesando.rb #40">omotesando.rb #40</a></div>
-    div.slide
+    </div>
+    <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/oedo07/viewer.html" width="640" height="524" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen> </iframe>
       <div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/oedo07/" title="oedo07">oedo07</a></div>
-    div.slide
+    </div>
+    <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/tqrk12/viewer.html" width="640" height="524" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen> </iframe>
       <div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/tqrk12/" title="TokyuRubyKaigi12">TokyuRubyKaigi12</a></div>
-    div.slide
+    </div>
+    <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/kosenconf_in_tokyo_2018/viewer.html" width="640" height="524" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen> </iframe>
       <div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/kosenconf_in_tokyo_2018/" title="kosenconf in tokyo 2018">kosenconf in tokyo 2018</a></div>
-    div.slide
+    </div>
+    <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/railsdm_2018_day_3_extreme/viewer.html" width="640" height="524" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen> </iframe>
       <div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/railsdm_2018_day_3_extreme/" title="Railsdm 2018 day 3 extreme">Railsdm 2018 day 3 extreme</a></div>
-    div.slide
-      iframe(src="https://unasuke.github.io/omotesandorb-35/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/omotesandorb-35/") https://unasuke.github.io/omotesandorb-35/
-    div.slide
-      iframe(src="https://unasuke.github.io/omotesandorb-34/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/omotesandorb-34/") https://unasuke.github.io/omotesandorb-34/
-    div.slide
-      iframe(src="https://unasuke.github.io/omotesandorb-33/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/omotesandorb-33/") https://unasuke.github.io/omotesandorb-33/
-    div.slide
-      iframe(src="https://unasuke.github.io/wakate2018w_talk/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/wakate2018w_talk/") https://unasuke.github.io/wakate2018w_talk/
-    div.slide
-      iframe(src="https://unasuke.github.io/fukuoka_ruby_kaigi_02_lt/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/fukuoka_ruby_kaigi_02_lt/") https://unasuke.github.io/fukuoka_ruby_kaigi_02_lt/
-    div.slide
-      iframe(src="https://unasuke.github.io/fnct_ob_talk_20171006/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/fnct_ob_talk_20171006/") https://unasuke.github.io/fnct_ob_talk_20171006/
-    div.slide
-      iframe(src="https://unasuke.github.io/dentoolt-17/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/dentoolt-17/") https://unasuke.github.io/dentoolt-17/
-    div.slide
-      iframe(src="https://unasuke.github.io/fukuitech-07.5/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/fukuitech-07.5/") https://unasuke.github.io/fukuitech-07.5/
-    div.slide
-      iframe(src="https://unasuke.github.io/fukuitech-07/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/fukuitech-07/") https://unasuke.github.io/fukuitech-07/
-    div.slide
-      iframe(src="https://unasuke.github.io/DGMS_20161122/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/DGMS_20161122/") https://unasuke.github.io/DGMS_20161122/
-    div.slide
-      iframe(src="https://unasuke.github.io/shibuyarb_20161116/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/shibuyarb_20161116/") https://unasuke.github.io/shibuyarb_20161116/
-    div.slide
-      iframe(src="https://unasuke.github.io/dentoolt-15/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/dentoolt-15/") https://unasuke.github.io/dentoolt-15/
-    div.slide
-      iframe(src="https://unasuke.github.io/fukuitech-06/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/fukuitech-06/") https://unasuke.github.io/fukuitech-06/
-    div.slide
-      iframe(src="https://unasuke.github.io/dentoolt-14/" height="400" width="600")
-      br
-      a(href="https://unasuke.github.io/dentoolt-14/") https://unasuke.github.io/dentoolt-14/
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/omotesandorb-35/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/omotesandorb-35/">https://unasuke.github.io/omotesandorb-35/</a>
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/omotesandorb-34/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/omotesandorb-34/">https://unasuke.github.io/omotesandorb-34/</a>
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/omotesandorb-33/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/omotesandorb-33/">https://unasuke.github.io/omotesandorb-33/</a>
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/wakate2018w_talk/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/wakate2018w_talk/">https://unasuke.github.io/wakate2018w_talk/</a>
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/fukuoka_ruby_kaigi_02_lt/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/fukuoka_ruby_kaigi_02_lt/">https://unasuke.github.io/fukuoka_ruby_kaigi_02_lt/</a>
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/fnct_ob_talk_20171006/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/fnct_ob_talk_20171006/">https://unasuke.github.io/fnct_ob_talk_20171006/</a>
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/dentoolt-17/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/dentoolt-17/">https://unasuke.github.io/dentoolt-17/</a>
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/fukuitech-07.5/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/fukuitech-07.5/">https://unasuke.github.io/fukuitech-07.5/</a>
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/fukuitech-07/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/fukuitech-07/">https://unasuke.github.io/fukuitech-07/</a>
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/DGMS_20161122/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/DGMS_20161122/">https://unasuke.github.io/DGMS_20161122/</a>
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/shibuyarb_20161116/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/shibuyarb_20161116/">https://unasuke.github.io/shibuyarb_20161116/</a>
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/dentoolt-15/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/dentoolt-15/">https://unasuke.github.io/dentoolt-15/</a>
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/fukuitech-06/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/fukuitech-06/">https://unasuke.github.io/fukuitech-06/</a>
+    </div>
+    <div class="slide">
+      <iframe src="https://unasuke.github.io/dentoolt-14/" height="400" width="600"></iframe>
+      <br>
+      <a href="https://unasuke.github.io/dentoolt-14/">https://unasuke.github.io/dentoolt-14/</a>
+    </div>
+  </div>
+</section>
 
-scss:
+<style>
   div.slides-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    // grid-template-columns: 640px 640px 640px;
   }
+</style>
