--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,7 +6,7 @@
     <meta content="width=device-width,initial-scale=1.0" name="viewport">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <title><%= current_page.data.title %></title>
-    <%= stylesheet_link_tag :base %>
+    <%= stylesheet_link_tag :all %>
     <%= javascript_include_tag :all %>
     <%= partial "layouts/google_analytics" %>
   </head>
