Roughly migrate to tailwindcss

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,36 +2,34 @@
 title: "unasuke.com"
 ---
 
-<%= stylesheet_link_tag :index %>
-
-<section class="index">
-  <div class="border-container">
-    <div class="title-container">
+<section class="pl-4 max-[320px]:pl-2 break-words grid grid-template mb-0 min-h-screen p-4">
+  <div class="border-[var(--main-color)] border-2 border-solid">
+    <div class="flex items-center -ml-1">
       <div class="circle"></div>
-      <section class="title">
-        <h1 class="site-title">unasuke.com</h1>
+      <section>
+        <h1 class="font-normal mt-8 text-[2em]">unasuke.com</h1>
       </section>
     </div>
-    <section class="contents">
-      <ul class="list-of-contents">
-        <li><a class="link" href="/aboutme">About me</a></li>
-        <li><a class="link" href="/activity">Activity</a></li>
-        <li><a class="link" href="/sponsor">Sponsor</a></li>
-        <li><a class="link" href="/slides">Slides</a></li>
-        <li><a class="link" href="/pay">Pay to unasuke</a></li>
-        <li><a class="link" href="https://blog.unasuke.com">Blog</a></li>
-        <li><a class="link" href="https://docs.google.com/forms/d/e/1FAIpQLSf-loEvN1RZdezkEWPBwNLygM3IjPkJbhGVStRTmm-jk3oXiw/viewform" target="_blank">Contact (Google Forms)</a></li>
+    <section>
+      <ul class="list-none pl-4">
+        <li class="mb-2"><a class="text-[var(--font-color)]" href="/aboutme">About me</a></li>
+        <li class="mb-2"><a class="text-[var(--font-color)]" href="/activity">Activity</a></li>
+        <li class="mb-2"><a class="text-[var(--font-color)]" href="/sponsor">Sponsor</a></li>
+        <li class="mb-2"><a class="text-[var(--font-color)]" href="/slides">Slides</a></li>
+        <li class="mb-2"><a class="text-[var(--font-color)]" href="/pay">Pay to unasuke</a></li>
+        <li class="mb-2"><a class="text-[var(--font-color)]" href="https://blog.unasuke.com">Blog</a></li>
+        <li class="mb-2"><a class="text-[var(--font-color)]" href="https://docs.google.com/forms/d/e/1FAIpQLSf-loEvN1RZdezkEWPBwNLygM3IjPkJbhGVStRTmm-jk3oXiw/viewform" target="_blank">Contact (Google Forms)</a></li>
       </ul>
     </section>
-    <section class="links">
-      <ul class="list-of-accounts">
-        <li>Twitter : <a href="https://twitter.com/yu_suke1994">yu_suke1994</a></li>
-        <li>GitHub : <a href="https://github.com/unasuke">unasuke</a></li>
-        <li>Mastodon : <a href="https://mstdn.unasuke.com/@unasuke" rel="me">unasuke@mstdn.unasuke.com</a></li>
-        <li>Keybase.io : <a href="https://keybase.io/unasuke">unasuke</a></li>
-        <li>note.com : <a href="https://note.com/unasuke">unasuke</a></li>
-        <li>mixi.social : <a href="https://mixi.social/@unasuke">@unasuke</a></li>
-        <li>LinkedIn : <a href="https://www.linkedin.com/in/unasuke-7b9240187/">https://www.linkedin.com/in/unasuke-7b9240187/</a></li>
+    <section>
+      <ul class="list-none pl-4">
+        <li class="mb-2">Twitter : <a class="text-[var(--font-color)]" href="https://twitter.com/yu_suke1994">yu_suke1994</a></li>
+        <li class="mb-2">GitHub : <a class="text-[var(--font-color)]" href="https://github.com/unasuke">unasuke</a></li>
+        <li class="mb-2">Mastodon : <a class="text-[var(--font-color)]" href="https://mstdn.unasuke.com/@unasuke" rel="me">unasuke@mstdn.unasuke.com</a></li>
+        <li class="mb-2">Keybase.io : <a class="text-[var(--font-color)]" href="https://keybase.io/unasuke">unasuke</a></li>
+        <li class="mb-2">note.com : <a class="text-[var(--font-color)]" href="https://note.com/unasuke">unasuke</a></li>
+        <li class="mb-2">mixi.social : <a class="text-[var(--font-color)]" href="https://mixi.social/@unasuke">@unasuke</a></li>
+        <li class="mb-2">LinkedIn : <a class="text-[var(--font-color)]" href="https://www.linkedin.com/in/unasuke-7b9240187/">https://www.linkedin.com/in/unasuke-7b9240187/</a></li>
       </ul>
     </section>
   </div>
