--- a/source/pay.html.erb
+++ b/source/pay.html.erb
@@ -2,15 +2,13 @@
 title: "pay to unasuke"
 ---
 
-<%= stylesheet_link_tag :pay %>
-
-<section class="pay">
+<section class="border-2 border-solid border-[var(--main-color)] m-4 pb-2 pr-4 max-[320px]:pr-0 pl-4 max-[320px]:pl-2 break-words">
   <h1>pay to unasuke</h1>
-  <section>
+  <section class="mb-12 max-[320px]:pl-0 max-[320px]:ms-0">
     <h2>1. 銀行振込</h2>
-    <h3>ことら送金</h3>
-    <pre>08019637685</pre>
-    <h3>口座情報</h3>
+    <h3 class="mb-0">ことら送金</h3>
+    <pre class="bg-gray-100 p-2 rounded">08019637685</pre>
+    <h3 class="mb-0">口座情報</h3>
     <p>
       みずほ銀行<br>
       渋谷中央支店(162)<br>
@@ -18,8 +16,9 @@ title: "pay to unasuke"
       ナカムラユウスケ
     </p>
   </section>
-  <section>
+  <section class="mb-12 max-[320px]:pl-0 max-[320px]:ms-0">
     <h2>2. PayPay</h2>
     <p>ID: unasuke</p>
   </section>
+  <a class="text-[var(--font-color)]" href="/">Back to index</a>
 </section>
