--- a/source/aboutme.html.erb
+++ b/source/aboutme.html.erb
@@ -1,81 +1,79 @@
-<%= stylesheet_link_tag :aboutme %>
-
-<section class="aboutme">
+<section class="border-2 border-solid border-[var(--main-color)] m-4 pb-2 pr-4 max-[320px]:pr-0 pl-4 max-[320px]:pl-2 break-words">
   <h1>About me</h1>
-  <section class="profile">
+  <section class="mb-12 max-[320px]:pl-0 max-[320px]:ms-0">
     <h2>Profile</h2>
     <dl>
       <dt>Name</dt>
-      <dd>Yusuke Nakamura (中村 勇介)</dd>
+      <dd class="mb-6 ms-6 max-[320px]:ms-0 max-[320px]:ml-0">Yusuke Nakamura (中村 勇介)</dd>
     </dl>
   </section>
-  <section class="skills">
+  <section class="mb-12 max-[320px]:pl-0 max-[320px]:ms-0">
     <h2>Skills</h2>
     <ul>
-      <li>
-        <h3>Ruby</h3>
+      <li class="mb-2">
+        <h3 class="mb-0">Ruby</h3>
         <p>2015年からRailsによるWebアプリケーション開発を主業務としています。</p>
       </li>
-      <li>
-        <h3>Python</h3>
+      <li class="mb-2">
+        <h3 class="mb-0">Python</h3>
         <p>簡単なスクリプトがリファレンスを見ながら書ける程度です。</p>
       </li>
-      <li>
-        <h3>Go</h3>
-        <p>AWS SDKを利用するCLIアプリケーションを go 1.8 の頃に作成したことがあります。 (<a href="https://github.com/unasuke/maekawa">unasuke/maekawa</a>)</p>
+      <li class="mb-2">
+        <h3 class="mb-0">Go</h3>
+        <p>AWS SDKを利用するCLIアプリケーションを go 1.8 の頃に作成したことがあります。 (<a class="text-[var(--font-color)]" href="https://github.com/unasuke/maekawa">unasuke/maekawa</a>)</p>
       </li>
-      <li>
-        <h3>Infrastructure</h3>
+      <li class="mb-2">
+        <h3 class="mb-0">Infrastructure</h3>
         <p>
           AWSを2015年から、GCPを2018年から使用しています。<br>
           アプリケーションのDocker化や、ECS、Kubernetesを用いたWebアプリケーションのコンテナによる実行環境の構築・運用の経験があります。
         </p>
-        <p>また、構成管理ツールであるItamaeのメンテナを務めています。<a href="/activity">(Activity参照)</a></p>
+        <p>また、構成管理ツールであるItamaeのメンテナを務めています。<a class="text-[var(--font-color)]" href="/activity">(Activity参照)</a></p>
       </li>
-      <li>
-        <h3>JavaScript/TypeScript</h3>
+      <li class="mb-2">
+        <h3 class="mb-0">JavaScript/TypeScript</h3>
         <p>Next.jsなどのフレームワークを使用したSPAの作成ができます。</p>
       </li>
-      <li>
-        <h3>CSS</h3>
+      <li class="mb-2">
+        <h3 class="mb-0">CSS</h3>
         <p>カンプからのLP作成や、改修作業程度はできますが、デザインそのものを行うことは苦手です。</p>
       </li>
     </ul>
-    <h3>これまで業務で使用してきた言語等</h3>
+    <h3 class="mb-0">これまで業務で使用してきた言語等</h3>
     <ul>
-      <li><a href="https://blog.unasuke.com/2023/wrap-up-my-coding/">サーバーサイドエンジニアとして2023年に使った技術と来年の目標 | うなすけとあれこれ</a></li>
-      <li><a href="https://blog.unasuke.com/2022/wrap-up-my-coding/">サーバーサイドエンジニアとして2022年に使った技術と来年の目標 | うなすけとあれこれ</a></li>
-      <li><a href="https://blog.unasuke.com/2021/wrap-up-my-coding/">サーバーサイドエンジニアとして2021年に使った技術と来年の目標 | うなすけとあれこれ</a></li>
-      <li><a href="https://blog.unasuke.com/2020/wrap-up-my-coding/">サーバーサイドエンジニアとして2020年に使った技術 | うなすけとあれこれ</a></li>
+      <li class="mb-2"><a class="text-[var(--font-color)]" href="https://blog.unasuke.com/2023/wrap-up-my-coding/">サーバーサイドエンジニアとして2023年に使った技術と来年の目標 | うなすけとあれこれ</a></li>
+      <li class="mb-2"><a class="text-[var(--font-color)]" href="https://blog.unasuke.com/2022/wrap-up-my-coding/">サーバーサイドエンジニアとして2022年に使った技術と来年の目標 | うなすけとあれこれ</a></li>
+      <li class="mb-2"><a class="text-[var(--font-color)]" href="https://blog.unasuke.com/2021/wrap-up-my-coding/">サーバーサイドエンジニアとして2021年に使った技術と来年の目標 | うなすけとあれこれ</a></li>
+      <li class="mb-2"><a class="text-[var(--font-color)]" href="https://blog.unasuke.com/2020/wrap-up-my-coding/">サーバーサイドエンジニアとして2020年に使った技術 | うなすけとあれこれ</a></li>
     </ul>
   </section>
-  <section class="socical-accounts">
+  <section class="mb-12 max-[320px]:pl-0 max-[320px]:ms-0">
     <h2>Social accounts</h2>
     <ul>
-      <li><a href="https://github.com/unasuke">https://github.com/unasuke</a></li>
-      <li><a href="https://twitter.com/yu_suke1994">https://twitter.com/yu_suke1994</a></li>
-      <li><a href="https://mstdn.unasuke.com/@unasuke">https://mstdn.unasuke.com/@unasuke</a></li>
-      <li><a href="https://keybase.io/unasuke">https://keybase.io/unasuke</a></li>
-      <li><a href="https://www.facebook.com/yusuke.nakamura1994">https://www.facebook.com/yusuke.nakamura1994</a></li>
+      <li class="mb-2"><a class="text-[var(--font-color)]" href="https://github.com/unasuke">https://github.com/unasuke</a></li>
+      <li class="mb-2"><a class="text-[var(--font-color)]" href="https://twitter.com/yu_suke1994">https://twitter.com/yu_suke1994</a></li>
+      <li class="mb-2"><a class="text-[var(--font-color)]" href="https://mstdn.unasuke.com/@unasuke">https://mstdn.unasuke.com/@unasuke</a></li>
+      <li class="mb-2"><a class="text-[var(--font-color)]" href="https://keybase.io/unasuke">https://keybase.io/unasuke</a></li>
+      <li class="mb-2"><a class="text-[var(--font-color)]" href="https://www.facebook.com/yusuke.nakamura1994">https://www.facebook.com/yusuke.nakamura1994</a></li>
     </ul>
   </section>
-  <section class="timeline">
+  <section class="mb-12 max-[320px]:pl-0 max-[320px]:ms-0">
     <h2>Timeline (new → old)</h2>
     <dl>
       <dt>2019年 5月</dt>
-      <dd>個人事業主として活動開始</dd>
+      <dd class="mb-6 ms-6 max-[320px]:ms-0 max-[320px]:ml-0">個人事業主として活動開始</dd>
       <dt>2019年 4月</dt>
-      <dd>株式会社バンク 退職</dd>
+      <dd class="mb-6 ms-6 max-[320px]:ms-0 max-[320px]:ml-0">株式会社バンク 退職</dd>
       <dt>2018年 2月</dt>
-      <dd>株式会社バンク 入社</dd>
+      <dd class="mb-6 ms-6 max-[320px]:ms-0 max-[320px]:ml-0">株式会社バンク 入社</dd>
       <dt>2018年 1月</dt>
-      <dd>株式会社spice life 退職</dd>
+      <dd class="mb-6 ms-6 max-[320px]:ms-0 max-[320px]:ml-0">株式会社spice life 退職</dd>
       <dt>2015年 4月</dt>
-      <dd>株式会社spice life 入社</dd>
+      <dd class="mb-6 ms-6 max-[320px]:ms-0 max-[320px]:ml-0">株式会社spice life 入社</dd>
       <dt>2015年 3月</dt>
-      <dd>福井工業高等専門学校 電子情報工学科 卒業</dd>
+      <dd class="mb-6 ms-6 max-[320px]:ms-0 max-[320px]:ml-0">福井工業高等専門学校 電子情報工学科 卒業</dd>
     </dl>
   </section>
 
-  <a href="/">Back to index</a>
+  <a class="text-[var(--font-color)]" href="/">Back to index</a>
 </section>
