--- a/source/sponsor.html.erb
+++ b/source/sponsor.html.erb
@@ -3,28 +3,27 @@ title: "sponsor | unasuke.com"
 ---
 
 <% sponsors = YAML.load(File.read(File.join("source", "data", "sponsors.yml"))) %>
-<%= stylesheet_link_tag :sponsor %>
 
-<section class="greeting">
-  <div class="message">
-    <h1>They are sponsors of the "unasuke.com".</h1>
+<section class="max-w-screen-xl mx-auto mb-12">
+  <div class="max-w-2xl mx-auto text-center">
+    <h1 class="text-3xl max-[426px]:text-xl">They are sponsors of the "unasuke.com".</h1>
     <p>Many thanks!</p>
   </div>
 </section>
-<section class="sponsors">
+<section class="max-w-[70%] mx-auto mb-12">
   <% sponsors.each_slice(3) do |_sponsors| %>
-    <div class="row">
+    <div class="grid grid-cols-3 max-[426px]:grid-cols-1 gap-5 mb-6">
       <% _sponsors.each do |person, data| %>
-        <div class="sponsor">
-          <div class="card">
-            <%= image_tag "sponsors/#{data['image']}", class: "image" %>
-            <div class="name">
+        <div class="px-5 max-[426px]:mb-6 max-[426px]:px-0">
+          <div class="box-border border border-[#838383] rounded bg-[#f9f9f9] shadow-[5px_5px_5px_#f0f0f0] text-center">
+            <%= image_tag "sponsors/#{data['image']}", class: "w-full mb-2.5 rounded-t" %>
+            <div class="text-xl leading-tight mb-2.5">
               <%= data["name"] %>
             </div>
-            <div class="account">
-              <span><i class="fab fa-twitter"></i></span>
+            <div class="mb-2.5">
+              <span><i class="fab fa-twitter mr-1"></i></span>
               <span>
-                <a class="link" href="https://twitter.com/<%= data["twitter"] %>">
+                <a class="text-[var(--font-color)]" href="https://twitter.com/<%= data["twitter"] %>">
                   <%= data["twitter"] %>
                 </a>
               </span>
@@ -35,12 +34,11 @@ title: "sponsor | unasuke.com"
     </div>
   <% end %>
 </section>
-<section class="link-to-sponsor">
+<section class="max-w-screen-xl mx-auto text-center text-2xl mb-12">
   <del>
-    <a class="link" href="https://steers.jp/c/6b819cbcc96b6727"></a>
-    I want to be a sponsor of the unasuke!
+    <a class="text-[var(--font-color)]" href="https://steers.jp/c/6b819cbcc96b6727">I want to be a sponsor of the unasuke!</a>
   </del>
 </section>
-<section class="link-to-index">
-  <a class="link" href="/">back to the index page.</a>
+<section class="max-w-screen-xl mx-auto text-center text-base mb-8">
+  <a class="text-[var(--font-color)]" href="/">back to the index page.</a>
 </section>
