--- a/source/slides.html.erb
+++ b/source/slides.html.erb
@@ -1,5 +1,5 @@
 <section>
-  <h1>Slides</h1>
+  <h1 class="text-[2rem] font-bold pt-3 mb-3">Slides</h1>
   <div class="slides-wrapper">
     <div class="slide">
       <iframe src="https://slide.rabbit-shocker.org/authors/unasuke/rubykaigi-takeout-2021/viewer.html" width="640" height="404" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border: 1px solid #ccc; border-width: 1px 1px 0; box-sizing: content-box; margin-bottom: 5px" allowfullscreen> </iframe><div style="margin-bottom: 5px"><a href="https://slide.rabbit-shocker.org/authors/unasuke/rubykaigi-takeout-2021/" title="Ruby, Ractor, QUIC">Ruby, Ractor, QUIC</a></div>
