--- a/source/sponsor.html.erb
+++ b/source/sponsor.html.erb
@@ -6,7 +6,7 @@ title: "sponsor | unasuke.com"
 
 <section class="max-w-screen-xl mx-auto mb-12">
   <div class="max-w-2xl mx-auto text-center">
-    <h1 class="text-3xl max-[426px]:text-xl">They are sponsors of the "unasuke.com".</h1>
+    <h1 class="text-3xl max-[426px]:text-xl font-bold pt-5 mb-5">They are sponsors of the "unasuke.com".</h1>
     <p>Many thanks!</p>
   </div>
 </section>
@@ -40,5 +40,5 @@ title: "sponsor | unasuke.com"
   </del>
 </section>
 <section class="max-w-screen-xl mx-auto text-center text-base mb-8">
-  <a class="text-[var(--font-color)]" href="/">back to the index page.</a>
+  <a class="text-[var(--font-color)] underline" href="/">back to the index page.</a>
 </section>
