Tweak css class name

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,34 +2,34 @@
 title: "unasuke.com"
 ---
 
-<section class="pl-4 max-[320px]:pl-2 break-words grid grid-template mb-0 min-h-screen p-4">
-  <div class="border-[var(--main-color)] border-2 border-solid">
+<section class="pl-4 max-[320px]:pl-2 wrap-break-word grid grid-template mb-0 min-h-screen p-4">
+  <div class="border-(--main-color) border-2 border-solid">
     <div class="flex items-center -ml-1">
       <div class="circle"></div>
-      <section class="pl-4 max-[320px]:pl-2 break-words grid grid-template mb-8">
+      <section class="pl-4 max-[320px]:pl-2 wrap-break-word grid grid-template mb-8">
         <h1 class="font-normal mt-6 text-[2rem]">unasuke.com</h1>
       </section>
     </div>
-    <section class="mb-8">
+    <section class="mb-8 pl-4">
       <ul class="list-none pl-4">
-        <li class="mb-1"><a class="text-[var(--font-color)] underline" href="/aboutme">About me</a></li>
-        <li class="mb-1"><a class="text-[var(--font-color)] underline" href="/activity">Activity</a></li>
-        <li class="mb-1"><a class="text-[var(--font-color)] underline" href="/sponsor">Sponsor</a></li>
-        <li class="mb-1"><a class="text-[var(--font-color)] underline" href="/slides">Slides</a></li>
-        <li class="mb-1"><a class="text-[var(--font-color)] underline" href="/pay">Pay to unasuke</a></li>
-        <li class="mb-1"><a class="text-[var(--font-color)] underline" href="https://blog.unasuke.com">Blog</a></li>
-        <li class="mb-1"><a class="text-[var(--font-color)] underline" href="https://docs.google.com/forms/d/e/1FAIpQLSf-loEvN1RZdezkEWPBwNLygM3IjPkJbhGVStRTmm-jk3oXiw/viewform" target="_blank">Contact (Google Forms)</a></li>
+        <li class="mb-1"><a class="text-(--font-color) underline" href="/aboutme">About me</a></li>
+        <li class="mb-1"><a class="text-(--font-color) underline" href="/activity">Activity</a></li>
+        <li class="mb-1"><a class="text-(--font-color) underline" href="/sponsor">Sponsor</a></li>
+        <li class="mb-1"><a class="text-(--font-color) underline" href="/slides">Slides</a></li>
+        <li class="mb-1"><a class="text-(--font-color) underline" href="/pay">Pay to unasuke</a></li>
+        <li class="mb-1"><a class="text-(--font-color) underline" href="https://blog.unasuke.com">Blog</a></li>
+        <li class="mb-1"><a class="text-(--font-color) underline" href="https://docs.google.com/forms/d/e/1FAIpQLSf-loEvN1RZdezkEWPBwNLygM3IjPkJbhGVStRTmm-jk3oXiw/viewform" target="_blank">Contact (Google Forms)</a></li>
       </ul>
     </section>
-    <section>
+    <section class="mb-8 pl-4">
       <ul class="list-none pl-4">
-        <li class="mb-1">Twitter : <a class="text-[var(--font-color)] underline" href="https://twitter.com/yu_suke1994">yu_suke1994</a></li>
-        <li class="mb-1">GitHub : <a class="text-[var(--font-color)] underline" href="https://github.com/unasuke">unasuke</a></li>
-        <li class="mb-1">Mastodon : <a class="text-[var(--font-color)] underline" href="https://mstdn.unasuke.com/@unasuke" rel="me">unasuke@mstdn.unasuke.com</a></li>
-        <li class="mb-1">Keybase.io : <a class="text-[var(--font-color)] underline" href="https://keybase.io/unasuke">unasuke</a></li>
-        <li class="mb-1">note.com : <a class="text-[var(--font-color)] underline" href="https://note.com/unasuke">unasuke</a></li>
-        <li class="mb-1">mixi.social : <a class="text-[var(--font-color)] underline" href="https://mixi.social/@unasuke">@unasuke</a></li>
-        <li class="mb-1">LinkedIn : <a class="text-[var(--font-color)] underline" href="https://www.linkedin.com/in/unasuke-7b9240187/">https://www.linkedin.com/in/unasuke-7b9240187/</a></li>
+        <li class="mb-1">Twitter : <a class="text-(--font-color) underline" href="https://twitter.com/yu_suke1994">yu_suke1994</a></li>
+        <li class="mb-1">GitHub : <a class="text-(--font-color) underline" href="https://github.com/unasuke">unasuke</a></li>
+        <li class="mb-1">Mastodon : <a class="text-(--font-color) underline" href="https://mstdn.unasuke.com/@unasuke" rel="me">unasuke@mstdn.unasuke.com</a></li>
+        <li class="mb-1">Keybase.io : <a class="text-(--font-color) underline" href="https://keybase.io/unasuke">unasuke</a></li>
+        <li class="mb-1">note.com : <a class="text-(--font-color) underline" href="https://note.com/unasuke">unasuke</a></li>
+        <li class="mb-1">mixi.social : <a class="text-(--font-color) underline" href="https://mixi.social/@unasuke">@unasuke</a></li>
+        <li class="mb-1">LinkedIn : <a class="text-(--font-color) underline" href="https://www.linkedin.com/in/unasuke-7b9240187/">https://www.linkedin.com/in/unasuke-7b9240187/</a></li>
       </ul>
     </section>
   </div>
