--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,7 +10,7 @@
     <%= javascript_include_tag :all %>
     <%= partial "layouts/google_analytics" %>
   </head>
-  <body class="box-border text-[var(--font-color)] font-[family-name:var(--font-noto)]">
+  <body class="box-border text-(--font-color) font-(family-name:--font-noto)">
     <%= yield %>
   </body>
 </html>
