--- a/source/pay.html.erb
+++ b/source/pay.html.erb
@@ -2,9 +2,9 @@
 title: "pay to unasuke"
 ---
 
-<section class="border-2 border-solid border-[var(--main-color)] m-4 pb-2 pr-4 max-[320px]:pr-0 pl-4 max-[320px]:pl-2 break-words">
+<section class="border-2 border-solid border-(--main-color) m-4 pb-2 pr-4 max-[320px]:pr-0 pl-4 max-[320px]:pl-2 wrap-break-word">
   <h1 class="text-[2rem] font-bold pt-3 mb-3">pay to unasuke</h1>
-  <section class="mb-10 max-[320px]:pl-0 max-[320px]:ms-0 pl-[1rem]">
+  <section class="mb-10 max-[320px]:pl-0 max-[320px]:ms-0 pl-4">
     <h2 class="text-2xl font-bold mb-3">1. 銀行振込</h2>
     <h3 class="text-xl font-bold mb-3">ことら送金</h3>
     <pre class="mb-4">08019637685</pre>
@@ -16,9 +16,9 @@ title: "pay to unasuke"
       ナカムラユウスケ
     </p>
   </section>
-  <section class="mb-10 max-[320px]:pl-0 max-[320px]:ms-0 pl-[1rem]">
+  <section class="mb-10 max-[320px]:pl-0 max-[320px]:ms-0 pl-4">
     <h2 class="text-2xl font-bold mb-3">2. PayPay</h2>
     <p>ID: unasuke</p>
   </section>
-  <a class="text-[var(--font-color)] underline" href="/">Back to index</a>
+  <a class="text-(--font-color) underline" href="/">Back to index</a>
 </section>
