--- a/source/towerman-no-kodoku.html.erb
+++ b/source/towerman-no-kodoku.html.erb
@@ -2,7 +2,7 @@
 title: "タワーマンの孤独 歌詞"
 ---
 
-<section class="px-[2em] flex flex-col justify-center bg-white max-w-[800px] mx-auto">
+<section class="px-[2em] flex flex-col justify-center bg-white max-w-200 mx-auto">
   <section class="w-full">
     <h1 class="text-[2rem] font-bold pt-4 mb-6 text-center">タワーマンの孤独</h1>
   </section>
@@ -16,7 +16,7 @@ title: "タワーマンの孤独 歌詞"
       <a class="underline" href="https://x.com/kashino_tsukune">樫野創音</a>
     </p>
   </section>
-  <section class="self-center max-w-[500px]">
+  <section class="self-center max-w-125">
     <p class="mb-4">1.</p>
     <p class="mb-4">
       高層ビルの最上階 ここが僕の世界<br>
