--- a/source/sponsor.html.erb
+++ b/source/sponsor.html.erb
@@ -4,7 +4,7 @@ title: "sponsor | unasuke.com"
 
 <% sponsors = YAML.load(File.read(File.join("source", "data", "sponsors.yml"))) %>
 
-<section class="max-w-screen-xl mx-auto mb-12">
+<section class="max-w-7xl mx-auto mb-12">
   <div class="max-w-2xl mx-auto text-center">
     <h1 class="text-3xl max-[426px]:text-xl font-bold pt-5 mb-5">They are sponsors of the "unasuke.com".</h1>
     <p>Many thanks!</p>
@@ -23,7 +23,7 @@ title: "sponsor | unasuke.com"
             <div class="mb-2.5">
               <span><i class="fab fa-twitter mr-1"></i></span>
               <span>
-                <a class="text-[var(--font-color)]" href="https://twitter.com/<%= data["twitter"] %>">
+                <a class="text-(--font-color)" href="https://twitter.com/<%= data["twitter"] %>">
                   <%= data["twitter"] %>
                 </a>
               </span>
@@ -34,11 +34,11 @@ title: "sponsor | unasuke.com"
     </div>
   <% end %>
 </section>
-<section class="max-w-screen-xl mx-auto text-center text-2xl mb-12">
+<section class="max-w-7xl mx-auto text-center text-2xl mb-12">
   <del>
-    <a class="text-[var(--font-color)]" href="https://steers.jp/c/6b819cbcc96b6727">I want to be a sponsor of the unasuke!</a>
+    <a class="text-(--font-color)" href="https://steers.jp/c/6b819cbcc96b6727">I want to be a sponsor of the unasuke!</a>
   </del>
 </section>
-<section class="max-w-screen-xl mx-auto text-center text-base mb-8">
-  <a class="text-[var(--font-color)] underline" href="/">back to the index page.</a>
+<section class="max-w-7xl mx-auto text-center text-base mb-8">
+  <a class="text-(--font-color) underline" href="/">back to the index page.</a>
 </section>
