Fix css style name on aboutme.html.erb

--- a/source/aboutme.html.erb
+++ b/source/aboutme.html.erb
@@ -1,13 +1,13 @@
-<section class="border-2 border-solid border-[var(--main-color)] m-4 pb-2 pr-4 max-[320px]:pr-0 pl-4 max-[320px]:pl-2 break-words">
+<section class="border-2 border-solid border-(--main-color) m-4 pb-2 pr-4 max-[320px]:pr-0 pl-4 max-[320px]:pl-2 wrap-break-wordword">
   <h1 class="text-[2rem] font-bold pt-3 mb-3">About me</h1>
-  <section class="mb-4 max-[320px]:pl-0 max-[320px]:ms-0 pl-[1rem]">
+  <section class="mb-4 max-[320px]:pl-0 max-[320px]:ms-0 pl-4">
     <h2 class="text-2xl font-bold mb-3">Profile</h2>
     <dl>
       <dt>Name</dt>
       <dd class="mb-6 ms-6 max-[320px]:ms-0 max-[320px]:ml-0">Yusuke Nakamura (中村 勇介)</dd>
     </dl>
   </section>
-  <section class="mb-10 max-[320px]:pl-0 max-[320px]:ms-0 pl-[1rem]">
+  <section class="mb-10 max-[320px]:pl-0 max-[320px]:ms-0 pl-4">
     <h2 class="text-2xl font-bold mb-3">Skills</h2>
     <ul class="list-disc pl-10 mb-4">
       <li class="mb-3">
@@ -20,7 +20,7 @@
       </li>
       <li class="mb-3">
         <h3 class="mb-2 text-lg font-bold">Go</h3>
-        <p class="mb-2">AWS SDKを利用するCLIアプリケーションを go 1.8 の頃に作成したことがあります。 (<a class="text-[var(--font-color)]" href="https://github.com/unasuke/maekawa">unasuke/maekawa</a>)</p>
+        <p class="mb-2">AWS SDKを利用するCLIアプリケーションを go 1.8 の頃に作成したことがあります。 (<a class="text-(--font-color)" href="https://github.com/unasuke/maekawa">unasuke/maekawa</a>)</p>
       </li>
       <li class="mb-3">
         <h3 class="mb-2 text-lg font-bold">Infrastructure</h3>
@@ -28,7 +28,7 @@
           AWSを2015年から、GCPを2018年から使用しています。<br>
           アプリケーションのDocker化や、ECS、Kubernetesを用いたWebアプリケーションのコンテナによる実行環境の構築・運用の経験があります。
         </p>
-        <p class="mb-2">また、構成管理ツールであるItamaeのメンテナを務めています。<a class="text-[var(--font-color)]" href="/activity">(Activity参照)</a></p>
+        <p class="mb-2">また、構成管理ツールであるItamaeのメンテナを務めています。<a class="text-(--font-color)" href="/activity">(Activity参照)</a></p>
       </li>
       <li class="mb-3">
         <h3 class="mb-2 text-lg font-bold">JavaScript/TypeScript</h3>
@@ -41,23 +41,23 @@
     </ul>
     <h3 class="text-lg font-bold mb-2">これまで業務で使用してきた言語等</h3>
     <ul class="list-disc pl-10">
-      <li class="mb-1"><a class="text-[var(--font-color)] underline" href="https://blog.unasuke.com/2023/wrap-up-my-coding/">サーバーサイドエンジニアとして2023年に使った技術と来年の目標 | うなすけとあれこれ</a></li>
-      <li class="mb-1"><a class="text-[var(--font-color)] underline" href="https://blog.unasuke.com/2022/wrap-up-my-coding/">サーバーサイドエンジニアとして2022年に使った技術と来年の目標 | うなすけとあれこれ</a></li>
-      <li class="mb-1"><a class="text-[var(--font-color)] underline" href="https://blog.unasuke.com/2021/wrap-up-my-coding/">サーバーサイドエンジニアとして2021年に使った技術と来年の目標 | うなすけとあれこれ</a></li>
-      <li class="mb-1"><a class="text-[var(--font-color)] underline" href="https://blog.unasuke.com/2020/wrap-up-my-coding/">サーバーサイドエンジニアとして2020年に使った技術 | うなすけとあれこれ</a></li>
+      <li class="mb-1"><a class="text-(--font-color) underline" href="https://blog.unasuke.com/2023/wrap-up-my-coding/">サーバーサイドエンジニアとして2023年に使った技術と来年の目標 | うなすけとあれこれ</a></li>
+      <li class="mb-1"><a class="text-(--font-color) underline" href="https://blog.unasuke.com/2022/wrap-up-my-coding/">サーバーサイドエンジニアとして2022年に使った技術と来年の目標 | うなすけとあれこれ</a></li>
+      <li class="mb-1"><a class="text-(--font-color) underline" href="https://blog.unasuke.com/2021/wrap-up-my-coding/">サーバーサイドエンジニアとして2021年に使った技術と来年の目標 | うなすけとあれこれ</a></li>
+      <li class="mb-1"><a class="text-(--font-color) underline" href="https://blog.unasuke.com/2020/wrap-up-my-coding/">サーバーサイドエンジニアとして2020年に使った技術 | うなすけとあれこれ</a></li>
     </ul>
   </section>
-  <section class="mb-10 max-[320px]:pl-0 max-[320px]:ms-0 pl-[1rem]">
+  <section class="mb-10 max-[320px]:pl-0 max-[320px]:ms-0 pl-4">
     <h2 class="text-2xl font-bold mb-3">Social accounts</h2>
     <ul class="list-disc pl-10">
-      <li class="mb-1"><a class="text-[var(--font-color)] underline" href="https://github.com/unasuke">https://github.com/unasuke</a></li>
-      <li class="mb-1"><a class="text-[var(--font-color)] underline" href="https://twitter.com/yu_suke1994">https://twitter.com/yu_suke1994</a></li>
-      <li class="mb-1"><a class="text-[var(--font-color)] underline" href="https://mstdn.unasuke.com/@unasuke">https://mstdn.unasuke.com/@unasuke</a></li>
-      <li class="mb-1"><a class="text-[var(--font-color)] underline" href="https://keybase.io/unasuke">https://keybase.io/unasuke</a></li>
-      <li class="mb-1"><a class="text-[var(--font-color)] underline" href="https://www.facebook.com/yusuke.nakamura1994">https://www.facebook.com/yusuke.nakamura1994</a></li>
+      <li class="mb-1"><a class="text-(--font-color) underline" href="https://github.com/unasuke">https://github.com/unasuke</a></li>
+      <li class="mb-1"><a class="text-(--font-color) underline" href="https://twitter.com/yu_suke1994">https://twitter.com/yu_suke1994</a></li>
+      <li class="mb-1"><a class="text-(--font-color) underline" href="https://mstdn.unasuke.com/@unasuke">https://mstdn.unasuke.com/@unasuke</a></li>
+      <li class="mb-1"><a class="text-(--font-color) underline" href="https://keybase.io/unasuke">https://keybase.io/unasuke</a></li>
+      <li class="mb-1"><a class="text-(--font-color) underline" href="https://www.facebook.com/yusuke.nakamura1994">https://www.facebook.com/yusuke.nakamura1994</a></li>
     </ul>
   </section>
-  <section class="mb-10 max-[320px]:pl-0 max-[320px]:ms-0 pl-[1rem]">
+  <section class="mb-10 max-[320px]:pl-0 max-[320px]:ms-0 pl-4">
     <h2 class="text-2xl font-bold mb-3">Timeline (new → old)</h2>
     <dl class="pl-2">
       <dt>2019年 5月</dt>
@@ -75,5 +75,5 @@
     </dl>
   </section>
 
-  <a class="text-[var(--font-color)] underline" href="/">Back to index</a>
+  <a class="text-(--font-color) underline" href="/">Back to index</a>
 </section>
